# whips

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py
config/: game_config.py
src/core/components/: transform.py
src/core/engine/: game_engine.py
src/core/systems/: audio_system.py  input_system.py  render_system.py
src/core/utils/: constants.py
src/game/entities/: player.py
tools/scripts/: build.py
